# text-summarizer-testing

./: .replit  README.md  TODO.md  azure_api.py  helpers.py  main.py  pyproject.toml  requirements.txt  tf_idf.py
backend/docs/: models.py  serializers.py  urls.py  views.py
backend/docs/migrations/: 0001_initial.py
backend/text_backend/: asgi.py  settings.py  urls.py  wsgi.py
data/: amazon.txt  at&t.txt  facebook.txt  google.txt  instagram.txt  netflix.txt  reddit.txt  twitter.txt  uber.txt  whatsapp.txt  yahoo.txt
flask-backend/: app.py  azure_client.py  load_api_key.py
