[tool.poetry]
name = "text-summarizer-testing"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
spacy = "^3.0.3"
python-dotenv = "^0.15.0"
azure-ai-textanalytics = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
